--- a/reactproject/package.json
+++ b/reactproject/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.2",
     "firebase": "^10.7.1",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
