--- a/reactproject/package.json
+++ b/reactproject/package.json
@@ -13,9 +13,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
